# luajit

./: .gitignore  CMakeLists.txt  Makefile.original
.github/workflows/: cmake.yml
cmake/: LuaJITUtils.cmake  SetDynASMFlags.cmake  SetTargetFlags.cmake  SetVersion.cmake
src/: CMakeLists.txt  Makefile  Makefile.original  lj_debug.c  lj_def.h  lj_jit.h  lj_trace.c  vm_x86.dasc
src/host/: CMakeLists.txt
test/: CMakeLists.txt
test/tarantool-tests/: CMakeLists.txt  gh-3196-incorrect-string-length.test.lua  gh-4427-ffi-sandwich.test.lua  gh-4476-fix-string-find-recording.test.lua  gh-4773-tonumber-fail-on-NUL-char.test.lua  lj-494-table-chain-infinite-loop.test.lua  lj-505-fold-no-strref-for-ptrdiff.test.lua  lj-524-fold-conv-respect-src-irt.test.lua  lj-flush-on-trace.test.lua  misclib-getmetrics-capi.test.lua  misclib-getmetrics-lapi.test.lua  misclib-memprof-lapi.test.lua  tap.lua  utils.lua
test/tarantool-tests/gh-4427-ffi-sandwich/: CMakeLists.txt
test/tarantool-tests/lj-flush-on-trace/: CMakeLists.txt
test/tarantool-tests/misclib-getmetrics-capi/: CMakeLists.txt
tools/: CMakeLists.txt
